--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -1,7 +1,7 @@
 <article class="media">
   <div class="media-left">
     <figure class="image is-64x64">
-      <img src="http://placehold.it/128x128" alt="Image">
+      <%= image_tag 'avatar.png' %>
     </figure>
   </div>
   <div class="media-content">
