--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,13 +1,7 @@
-<section class="section">
+<section class="section" style="height: 100vh">
   <div class="container">
-    <h1 class="title">
-      Chat Room
-    </h1>
-    <p class="subtitle">
-      My first chat application, powered by <strong>ActionCable</strong>.
-    </p>
 
-    <div class='box' id='messages' style='overflow-y:scroll; height: 400px'>
+    <div class='box' id='messages' style='overflow-y:scroll;'>
       <%= render @messages %>
     </div>
 
