--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -1,10 +1,10 @@
 <%= form_for Message.new, remote: true do |f| %>
   <div class="field is-grouped">
     <p class="control is-expanded">
-      <%= f.text_field :body, class: 'input', placeholder: 'type ...' %>
+      <%= f.text_field :body, class: 'input is-large', placeholder: 'type ...', autocomplete: 'off' %>
     </p>
     <p class="control">
-      <%= f.submit 'Send', class: 'button is-info' %>
+      <%= f.submit 'Send', class: 'button is-info is-large' %>
     </p>
   </div>
 <% end %>
