--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,7 +1,7 @@
 <section class="section" style="height: 100vh">
   <div class="container">
 
-    <div class='box' id='messages' style='overflow-y:scroll;'>
+    <div class='box' id='messages'>
       <%= render @messages %>
     </div>
 
